force-app/main/default/objects/Day__c/Day__c.object-meta.xml
<CustomObject>
    <description>This object simply has one record for every day of the year. This record holds information about which day it is, which week it is in according to the ISO-8601 Standards, which countries celebrate public holidays on this day, etc.</description>
    <label>Day</label>
    <nameField>
        <label>Day</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>