force-app/main/default/objects/Day__c/fields/Day_of_the_Year__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Year__c</fullName>
    <formula>Date__c - DATE(YEAR(Date__c), 1, 1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>