force-app/main/default/objects/Day__c/fields/Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Number__c</fullName>
    <formula>MONTH( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>