force-app/main/default/objects/Day__c/fields/Month_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Month_Numeric__c</fullName>
    <formula>TEXT(MONTH( Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month (Numeric)</label>
    <type>Text</type>
</CustomField>