force-app/main/default/objects/Day__c/fields/Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Public_Holiday__c</fullName>
    <label>Public Holiday</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>