force-app/main/default/objects/Day__c/fields/Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Day__c</fullName>
    <formula>CASE(
    MOD(Date__c - DATE(1900, 1, 7), 7),
    0, &quot;Sunday&quot;,
    1, &quot;Monday&quot;,
    2, &quot;Tuesday&quot;,
    3, &quot;Wednesday&quot;,
    4, &quot;Thursday&quot;,
    5, &quot;Friday&quot;,
    6, &quot;Saturday&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Day</label>
    <type>Text</type>
</CustomField>