force-app/main/default/objects/Day__c/fields/Week_Day_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Week_Day_Numeric__c</fullName>
    <formula>CASE(
MOD(Date__c - DATE(1900, 1, 8), 7),
0, 1, 
1, 2, 
2, 3,  
3, 4, 
4, 5, 
5, 6,  
6, 7, 
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Day (Numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>