force-app/main/default/objects/Day__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <inlineHelpText>ISO-8601 (First week of a year, is the first week to include a Thursday)</inlineHelpText>
    <label>Week Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>